--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.4.3"
     implementation 'androidx.room:room-ktx:2.4.3'
     kapt "androidx.room:room-compiler:2.4.3"
+
+    //Json
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
